비트캠프 예제

--- a/Structure/Structure.vcxproj.filters
+++ b/Structure/Structure.vcxproj.filters
@@ -36,5 +36,14 @@
     <ClCompile Include="Source6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source7.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source9.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
