--- a/Structure/Structure.vcxproj.filters
+++ b/Structure/Structure.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="Source19.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source20.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
