--- a/Structure/Structure.vcxproj.filters
+++ b/Structure/Structure.vcxproj.filters
@@ -84,5 +84,19 @@
     <ClCompile Include="Source20.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source21.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source22.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source23.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Human.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
