--- a/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
+++ b/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
@@ -24,5 +24,17 @@
     <ClCompile Include="basic3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="middle4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="middle1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="middle2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="middle3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
