--- a/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
+++ b/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
@@ -51,5 +51,11 @@
     <ClCompile Include="array3-1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
