--- a/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
+++ b/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
@@ -57,5 +57,16 @@
     <ClCompile Include="array4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="star.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="turboc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="turboc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
