--- a/_2020_06_29Lecture/_2020_06_29Lecture/_2020_06_29Lecture.vcxproj.filters
+++ b/_2020_06_29Lecture/_2020_06_29Lecture/_2020_06_29Lecture.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="_23_constructor_destructor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_24_cin_array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_25_cin_getline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_26_string.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
