--- a/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
+++ b/_2020_06_26Assignment/_2020_06_26Assignment/_2020_06_26Assignment.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="turboc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="star1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="turboc.h">
