--- a/_2020_06_29Assignment/_2020_06_29Assignment/_2020_06_29Assignment.vcxproj.filters
+++ b/_2020_06_29Assignment/_2020_06_29Assignment/_2020_06_29Assignment.vcxproj.filters
@@ -45,5 +45,11 @@
     <ClCompile Include="middle8.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="advanced1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="advanced2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
