--- a/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj
+++ b/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="matrix.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">a</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="fighter.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
