--- a/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj.filters
+++ b/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="quiz.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Typing.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="turboc.h">
