--- a/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj
+++ b/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj
@@ -173,6 +173,7 @@
     </ClCompile>
     <ClCompile Include="Typing.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="tetris2.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
