--- a/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj.filters
+++ b/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj.filters
@@ -30,5 +30,11 @@
     <ClCompile Include="_33_copyConstructor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_34_static.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="_35_static.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
