--- a/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj.filters
+++ b/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="_35_static.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="_36_this.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
