--- a/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj
+++ b/_2020_07_01Lecture/_2020_07_01Lecture.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="_36_this.cpp" />
+    <ClCompile Include="_37_this.cpp" />
+    <ClCompile Include="_36_this.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="_35_static.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
