--- a/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj.filters
+++ b/_2020_07_03Assignment/_2020_07_03Assignment/_2020_07_03Assignment.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Typing.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="originalmatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="turboc.h">
